refactor: remove classes e métodos não utilizados relacionados a RespostaAvaliacao e simplifica a classe Avaliacao, além de comentar temporariamente dependências de teste no pom.xml